EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
== 02/18/2015 ==
Trevius: Fix for potential recursive loops if using RemoveFromHateList() within EVENT_HATE_LIST.

== 02/17/2015 ==
Uleat: Implemented per-client character creation limiting. Caps are unknown atm..so, don't get over-zealous!
Notes:
	- Titanium is hard-coded to min/max of 8 in both the server and client translator code (client doesn't support variations in available character count)
	- SoF thru RoF2 have had their max characters raised to 12 from 10
	- Changing the number of characters per account is accomplished by:
		1) Setting consts::CHARACTER_CREATION_LIMIT to the desired count in the client's constants file in ../common/patches/
		2) Ensuring that eq_dictionary's EmuConstants::CHARACTER_CREATION_LIMIT is equal-greater than the client's new value..referencing is good
		3) Recompiling the server code
	- A rules-based qualifier may be added at some point

== 02/16/2015 ==
Trevius: (RoF2) Bazaar Trading (Buying/Selling) is now fully functional.  Bazaar (/bazaar) search is not yet functional.
demonstar55: (RoF2) Send the bard focus effects, note custom servers will need to fix their items, server side we still use the old system, but RoF2 wasn't showing anything with not sending focus, so send them

== 02/14/2015 ==
Trevius: (RoF2) Bazaar is now partially functional.  RoF2 clients can start/end trader mode and other clients can purchase from them.  No other functionality yet.
Uleat: Implemented higher bandolier and potion belt counts for clients that support it..you will still need to activate them through the proper aa's, etc...

== 02/12/2015 ==
Akkadius: Implement zone based gravity, required SQL DB change
	- To test `zone` table `gravity` values, change the value and use #zheader <zoneshortname> to test

== 02/11/2015 ==
Trevius: (RoF+) Bandolier no longer displays a Treasure Chest Icon when no Bandoliers are set.

== 02/09/2015 ==