@@ -96,6 +96,7 @@ E(OP_Trader)
 E(OP_TraderBuy)
 E(OP_TributeInfo)
 E(OP_TributeItem)
+E(OP_VetClaimReply)
 E(OP_VetRewardsAvaliable)
 E(OP_WearChange)
 E(OP_WhoAllResponse)
@@ -159,6 +160,7 @@ D(OP_Trader)
 D(OP_TraderBuy)
 D(OP_TradeSkillCombine)
 D(OP_TributeItem)
+D(OP_VetClaimRequest)
 D(OP_WhoAllRequest)
 D(OP_ZoneChange)
 D(OP_ZoneEntry)
