@@ -525,7 +525,7 @@ OP_KnowledgeBase=0x0000
 OP_SlashAdventure=0x571a	# /adventure
 OP_VetRewardsAvaliable=0x0557
 OP_VetClaimRequest=0x6ba0
-OP_VetClaimReply=0x0000
+OP_VetClaimReply=0x407e
 OP_BecomePVPPrompt=0x36B2	#guessed from ASM
 OP_PVPStats=0x5cc0
 OP_PVPLeaderBoardRequest=0x61d2
