@@ -1,5 +1,9 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 02/20/2015 ==
+demonstar55: Implement claims for RoF/RoF2 (should no longer crash the client!)
+	- fixed bugs related to claims for the rest of the clients (woo infinite loops)
+
 == 02/18/2015 ==
 Trevius: Fix for potential recursive loops if using RemoveFromHateList() within EVENT_HATE_LIST.
 
